Fix for line wrapping in columns.

--- a/p2-manager-frontend/public/style.css
+++ b/p2-manager-frontend/public/style.css
@@ -2,6 +2,10 @@ body {
 	background-color: #19A9F9
 }
 
+li {
+    word-break: break-all;
+  }
+
 .container {
 	background-color: white
 }
